# Image_segmentation_autonomous_car

./: .gitignore  api.py  application.py  extracted_data.csv  pyproject.toml  requirements.txt  requirements_backup.txt
