[tool.poetry]
name = "p8-participez-conception-voiture-autonome"
version = "0.1.0"
description = "Image_segmentation_autonomous_car"
authors = ["MatTheAnalyst <matthieu92400@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
albumentations = "1.3.1"
keras = "2.15.0"
matplotlib = "3.7.1"
numpy = "1.25.2"
pandas = "2.0.3"
pillow = "9.4.0"
scikit-learn = "1.2.2"
tensorflow = "2.15.0"
segmentation-models = "1.0.1"
pydantic = "2.7.1"
fastapi = "0.111.0"
typing = "3.7.4.3"
uvicorn = "0.29.0"
streamlit = "1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
